--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+    <link rel="icon" href="{% static 'icon.png' %}" type="image/png">
     <title>ООО "Обувь"</title>
 </head>
 
