--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
     <link rel="icon" href="{% static 'icon.png' %}" type="image/png">
-    <title>ООО "Обувь"</title>
+    <title>{% block title %}ООО "Обувь"{% endblock %}</title>
 </head>
 
 <body>
