--- a/product/templates/product/product_confirm_delete.html
+++ b/product/templates/product/product_confirm_delete.html
@@ -17,7 +17,7 @@
             <p>Удалить "{{ object }}"?</p>
             {{ form }}
             <input class="btn attention" type="submit" value="Да">
-            <a class="btn attention" href="{% url 'order_list' %}">Нет</a>
+            <a class="btn attention" href="{% url 'product_list' %}">Нет</a>
         </form>
     </div>
 </div>
